<resources>
    <string name="app_name">UASTS</string>
    <string name="title_home">Home</string>
    <string name="title_transfers">Transfers</string>
    <string name="title_rumour">Rumour</string>
    <string name="title_standings">Standings</string>
    <string name="title_profil">Profil</string>

    <string-array name="positions_array">
        <item>GK</item>
        <item>CB</item>
        <item>RB</item>
        <item>LB</item>
        <item>DM</item>
        <item>CM</item>
        <item>AM</item>
        <item>RM</item>
        <item>LM</item>
        <item>RW</item>
        <item>LW</item>
        <item>ST</item>
    </string-array>

    <string-array name="description_templates">
        <item>The transfer grapevine is abuzz with whispers surrounding the potential move of [Player Name] from [Current Club Name] to [New Club Name]. Speculations are ripe, hinting at a substantial transfer fee hovering around € [Transfer Fee]m. Fans are eagerly anticipating further developments in this saga! #TransferGossip #StayTuned</item>
        <item>Recent reports have ignited talks of [Player Name] from [Current Club Name] being on the radar of [New Club Name] as they look to bolster their squad. Sources suggest that negotiations are underway, with the proposed transfer fee estimated to be in the region of € [Transfer Fee]m. Keep your eyes peeled for more updates! #TransferRumors #WatchOut</item>
        <item>Rumblings in the transfer market suggest that discussions are heating up between [Player Name] and [New Club Name], with the player currently at [Current Club Name]. While the exact figures remain undisclosed, speculation is rife that the potential transfer fee could surpass € [Transfer Fee]m. Will this murmuring transform into a concrete deal? #TransferTalk #RumorMill</item>
        <item>Excitement mounts among supporters as rumors circulate about [New Club Name] expressing a keen interest in securing the services of [Player Name] from [Current Club Name]. Sources indicate that talks have progressed, with murmurs hinting at a transfer fee exceeding € [Transfer Fee]m. An intriguing narrative unfolds! #TransferSpeculation #FootballGossip</item>
        <item>The transfer rumor mill goes into overdrive as reports emerge of [New Club Name] intensifying their pursuit of [Player Name] from [Current Club Name]. While details remain sketchy, whispers in the wind suggest a potential transfer fee close to € [Transfer Fee]m. Will these whispers culminate in a significant transfer deal? Stay tuned for more updates! #TransferRumor #StayUpdated</item>
    </string-array>

    <string-array name="description_transfer">
        <item> Breaking news rocks the footballing world as [Player Name] officially completes his much-anticipated move to [New Club Name] from [Before Club Name]. The transfer fee is reported to be a whopping €[Transfer Fee]m. A new chapter begins! #TransferNews #Welcome [Player Name]</item>
        <item> The ink is dry! [Player Name] puts pen to paper and finalizes his transfer to [New Club Name] in a deal reported to be worth €[Transfer Fee]m. Fans eagerly await his impact on the pitch! #TransferComplete #GoodLuck [Player Name]</item>
        <item> The wait is over! [New Club Name] formally announces the acquisition of [Player Name] from [Before Club Name] for a significant transfer fee of €[Transfer Fee]m. An exciting addition to the squad! #TransferAnnouncement #Welcome [Player Name]</item>
        <item> Transfer negotiations culminate in success as [New Club Name] secures the signature of [Player Name] from [Before Club Name] for a reported transfer fee of €[Transfer Fee]m. The stage is set for a thrilling chapter! #TransferDeal #FootballNews</item>
    </string-array>

</resources>