<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transfers"
        android:icon="@drawable/baseline_transform_24"
        android:title="@string/title_transfers" />

    <item
        android:id="@+id/navigation_rumour"
        android:icon="@drawable/baseline_question_mark_24"
        android:title="@string/title_rumour" />

    <item
        android:id="@+id/navigation_standing"
        android:icon="@drawable/baseline_leaderboard_24"
        android:title="@string/title_standings" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profil" />




</menu>