<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.uasts.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transfers"
        android:name="com.example.uasts.ui.transfer.TransferFragment"
        android:label="@string/title_transfers"
        tools:layout="@layout/fragment_transfer" />


    <fragment
        android:id="@+id/navigation_rumour"
        android:name="com.example.uasts.ui.rumour.RumourFragment"
        android:label="@string/title_rumour"
        tools:layout="@layout/fragment_rumour" />


    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.uasts.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>